--- a/static/css/ponder.css
+++ b/static/css/ponder.css
@@ -128,6 +128,28 @@ a.front-link {
     color: #404040;
 }
 
+@media (prefers-color-scheme: dark) {
+    a.front-link {
+        color: #b0b0b0;
+    }
+
+    .well {
+        background-color: #222;
+    }
+
+    footer {
+        background: #222;
+    }
+
+    footer a {
+        color: #777;
+    }
+
+    .text-muted {
+        color: #999;
+    }
+}
+
 a.malleable-picture {
     background-color: #000;
     color: hsla(0,0%,100%,.9);
